feat(grapesjs): edit Components/addComponent example

--- a/grapesjs/Components/addComponent/src/index.html
+++ b/grapesjs/Components/addComponent/src/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <button id="add_cmp_btn" type="button">add component</button>
+    <span id="cmp_count">0</span>
     <div id="editor"></div>
   </body>
 </html>
